--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,7 @@
-body {
+#carrinho {
     margin: 0;
     font-family: 'Quicksand', sans-serif;
+    
 }
 
 nav ul li {
@@ -86,6 +87,61 @@ main ul li button{
     border-color:  #4DC9EA;
     padding: 5px;
     
+}
+/* seção das informações do carrinho*/
+section {
+    display:inline-flex
+    padding: 10px
+    height: 400px;
+    width: 475px;
+    border: 4px solid #0CCBDE;
+    border-radius: 5px;
+    position: fixed;
+
+    -webkit-box-shadow: 4px 7px 12px -1px rgba(138,127,138,0.78);
+    -moz-box-shadow: 4px 7px 12px -1px rgba(138,127,138,0.78);
+    box-shadow: 4px 7px 12px -1px rgba(138,127,138,0.78);
+    width: 500px;
+    height: auto;
+    margin: 40px 100px;
+    padding: 20px;
+    background-color:4px 7px 12px -1px rgba(138,127,138,0.78);
+    border-radius: 20px;
+    margin-left: 375px;
+    
+    
+}
+/* botão de finalizar compra do carrinho*/
+#botaocompra{
+    height: 40px;
+    width: 100px;
+    border-radius: 20px;
+    border: none;
+    margin: 0 198px;
+    background-color: #0CCBDE;
+    color: rgb(0, 0, 0);
+    margin-bottom: 40px
+    text-align: center;
+    
+    
 
 }
+#botaocompra:hover {
+    transform: scale(1.1)
+        color: #000;
+        background-color: #F6F6F9;
+}
 
+/* texto do carrinho*/
+#meucarrinho{
+    text-align: center;
+    text-overflow: clip;
+    text-decoration: rgb(0, 0, 0);
+}
+/*elementos do carrinho*/
+.infos{
+    margin: 0 320px;
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
